# SIAP

./: README.md  data.ipynb  models.ipynb  pyproject.toml
datasets/: test.csv  train.csv  validation.csv
models/: dtc.pickle  gnb.pickle  knn.pickle  lr.pickle  rfc.pickle  svc.pickle
