[tool.poetry]
name = "projekat"
version = "0.1.0"
description = ""
authors = ["Tamara Ranković <rankovictamaraa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
notebook = "^6.4.8"
jupyter = "^1.0.0"
requests = "^2.27.1"
matplotlib = "^3.5.1"
googlemaps = "^4.6.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
